<resources>
    <string name="app_name">Recipe App</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="shopping_list">Shopping List</string>
    <string name="meal_plan">Weekly Meal Plan</string>
    <string name="profile">Profile</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="plan_meal">Plan \nMeal</string>
    <string name="a">A</string>
    <string name="apple_frangipan_tart">Apple Frangipan Tart</string>
    <string name="dessert">Dessert</string>
    <string name="add">Add</string>
    <string name="error">Some error occurred</string>
    <string name="no_result_found">No result found</string>
    <string name="ingredient">Ingredient</string>
    <string name="recipe">Recipe</string>
    <string name="quantity">Quantity</string>
    <string name="ingredients">Ingredients</string>
    <string name="user_name">User Name</string>
    <string name="dietary_restrictions">Dietary Restrictions</string>
    <string name="enter_dietary_restrictions">Enter dietary restrictions</string>
    <string name="save">Save</string>
    <string name="no_restrictions_added">No Restrictions Added</string>

    <string-array name="cuisine">
        <item>Select Cuisine</item>
        <item>Indian</item>
        <item>Chinese</item>
        <item>South-Indian</item>
        <item>Italian</item>
        <item>French</item>
        <item>Japanese</item>
        <item>Thai</item>
        <item>Mexican</item>
    </string-array>
</resources>